<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/mybg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.DetailUserActivity">

        <ProgressBar
            android:id="@+id/pb_detailuser_detailUI"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tablayout_detailUI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_photo_user_detailUI"
            tools:src="@tools:sample/avatars"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/placeholder_user"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_width="120dp"
            android:layout_height="120dp"/>


        <ImageView
            android:id="@+id/ic_location_detaiUL"
            android:src="@drawable/ic_baseline_location_on_24"
            app:layout_constraintBottom_toBottomOf="@id/iv_photo_user_detailUI"
            app:layout_constraintStart_toEndOf="@id/iv_photo_user_detailUI"
            android:layout_marginStart="12dp"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/ic_location_detail_ui" />

        <TextView
            android:id="@+id/tv_liveAt_detailUI"
            android:text="@string/location"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/ic_location_detaiUL"
            app:layout_constraintTop_toTopOf="@id/ic_location_detaiUL"
            app:layout_constraintBottom_toBottomOf="@id/ic_location_detaiUL"
            style="@style/TextContentTitle"/>

        <TextView
            android:id="@+id/tv_locationdata_detailUI"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_liveAt_detailUI"
            app:layout_constraintTop_toTopOf="@id/tv_liveAt_detailUI"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="4dp"
            android:text="@string/not_set"
            android:textSize="12sp"
            android:textColor="@color/mypink_700"
            android:layout_marginEnd="12dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/iv_work_detailUI"
            app:layout_constraintStart_toStartOf="@id/ic_location_detaiUL"
            app:layout_constraintBottom_toTopOf="@id/ic_location_detaiUL"
            android:layout_marginBottom="4dp"
            android:src="@drawable/ic_baseline_work_outline_24"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/icon_work" />

        <TextView
            android:id="@+id/tv_work_detailUI"
            app:layout_constraintStart_toStartOf="@id/tv_liveAt_detailUI"
            app:layout_constraintBottom_toBottomOf="@id/iv_work_detailUI"
            app:layout_constraintTop_toTopOf="@id/iv_work_detailUI"
            android:text="@string/work_at"
            style="@style/TextContentTitle"/>

        <TextView
            android:id="@+id/tv_workdata_detailUI"
            app:layout_constraintStart_toEndOf="@id/tv_work_detailUI"
            app:layout_constraintTop_toTopOf="@id/tv_work_detailUI"
            app:layout_constraintBottom_toBottomOf="@id/tv_work_detailUI"
            android:text="@string/not_set"
            android:textColor="@color/mypink_700"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="12dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_usernamedata_detailUI"
            app:layout_constraintStart_toStartOf="@id/ic_location_detaiUL"
            app:layout_constraintBottom_toTopOf="@id/iv_work_detailUI"
            android:layout_marginBottom="8dp"
            android:textColor="@color/mypink_700"
            tools:text="@string/dummy_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:maxLines="1"
            android:layout_marginEnd="12dp"
            android:ellipsize="end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_name_detailUI"
            android:textStyle="bold"
            android:textSize="16sp"
            tools:text="@string/dummy_name"
            android:textColor="@color/mypink_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/ic_location_detaiUL"
            app:layout_constraintBottom_toTopOf="@id/tv_usernamedata_detailUI"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="12dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_half_vert_detailUI"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/ic_following_detailUI"
            android:src="@drawable/ic_baseline_follow_the_signs_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/gl_half_vert_detailUI"
            app:layout_constraintTop_toBottomOf="@id/tv_locationdata_detailUI"
            android:layout_marginTop="20dp"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/ic_following" />

        <TextView
            android:id="@+id/tv_followingdata_UI"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_following_detailUI"
            app:layout_constraintEnd_toEndOf="@id/gl_half_vert_detailUI"
            android:textAlignment="center"
            android:textColor="@color/mypink_700"
            tools:text="@string/dummy_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/ic_follower_detailUI"
            app:layout_constraintStart_toEndOf="@id/gl_half_vert_detailUI"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ic_following_detailUI"
            app:layout_constraintBottom_toBottomOf="@id/ic_following_detailUI"
            android:src="@drawable/ic_baseline_people_alt_24"
            android:contentDescription="@string/ic_follower"
            android:layout_width="16dp"
            android:layout_height="16dp"/>

        <TextView
            android:id="@+id/tv_followerdata_DetailUI"
            app:layout_constraintStart_toEndOf="@id/gl_half_vert_detailUI"
            app:layout_constraintTop_toBottomOf="@id/ic_follower_detailUI"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:textColor="@color/mypink_700"
            tools:text="@string/dummy_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tablayout_detailUI"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/tabbg"
            app:layout_constraintTop_toBottomOf="@id/tv_followingdata_UI"
            app:tabMode="fixed"
            app:tabIndicatorGravity="stretch"
            app:tabIndicatorAnimationMode="elastic"
            app:tabSelectedTextColor="@color/white"
            app:tabIndicator="@drawable/tab_indicator"
            app:tabGravity="fill"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_detailUI"
            app:layout_constraintStart_toStartOf="@id/tablayout_detailUI"
            app:layout_constraintEnd_toEndOf="@id/tablayout_detailUI"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tablayout_detailUI"
            android:background="@color/mypink_500"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



